Match detail view can work.

--- a/game/templates/game/match_detail.html
+++ b/game/templates/game/match_detail.html
@@ -4,6 +4,8 @@
 <div class="container">
     <div class="col-md-8 col-md-offset-2">
         <h1>Match detail</h1>
+        <h3>Team1: {{ match.team1 }}</h3>
+        <h3>Team2: {{ match.team2 }}</h3>
     </div>
 </div>
 {% endblock %}
