--- a/goroda/templates/login.html
+++ b/goroda/templates/login.html
@@ -3,8 +3,8 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="col-md-4 col-md-offset-4">
+<div class="container-fluid"><div class="row">
+    <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
         <div class="panel panel-info">
             <div class="panel-heading text-center">
                 <div class="panel-title">Login</div>
@@ -34,5 +34,5 @@
             </div>
         </div>
     </div>
-</div>
+</div></div>
 {% endblock %}
