--- a/goroda/templates/login.html
+++ b/goroda/templates/login.html
@@ -23,12 +23,8 @@
                         <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
                         <input class="form-control" type="password" name="{{ form.password.name }}" value="{{ form.password.value|default_if_none:'' }}" required />
                     </div>
-                    <div class="form-group">
-                        <div class="col-sm-12 coltrols">
-                            <button type="submit" class="btn btn-primary col-sm-12"><i class="fa fa-sign-in icon-text">&nbsp;</i>Login</button>
-                        </div>
-                    </div>
-                    <br>
+
+                    <button class="btn btn-primary btn-block" type="submit"><i class="fa fa-sign-in">&nbsp;</i>Login</button>
                     <input type="hidden" name="next" value="{{ next }}" />
                 </form>
             </div>
