--- a/game/templates/game/match_detail.html
+++ b/game/templates/game/match_detail.html
@@ -14,6 +14,11 @@
     </div>
     <div class="row match-detail-row">
         <div class="col-md-6 col-md-offset-3">
+            <a href={% url 'game:end' match.id %} class="btn btn-default">End game</a>
+        </div>
+    </div>
+    <div class="row match-detail-row">
+        <div class="col-md-6 col-md-offset-3">
             <form id="maketurn_form" method="POST">
                 {% csrf_token %}
                 {% if turn_form.non_field_errors %}<p class="text-danger">{{ turn_form.non_field_errors }}</p>{% endif %}
