--- a/game/templates/game/match_detail.html
+++ b/game/templates/game/match_detail.html
@@ -14,6 +14,7 @@
     </div>
     <div class="row match-detail-row">
         <div class="col-md-6 col-md-offset-3">
+            <a href={% url 'index' %} class="btn btn-default"><i class="fa fa-home"></i></a>
             <a href={% url 'game:end' match.id %} class="btn btn-default">End game</a>
         </div>
     </div>
